test_case/rust-lang_rust/103451_1288461764.rs
rust
struct R { }

struct S {
    x: [u8; R //~ ERROR this file contains an unclosed delimiter
    //~| ERROR expected value
